--- a/manual/input/elemaero.tex
+++ b/manual/input/elemaero.tex
@@ -1240,7 +1240,7 @@ The syntax is:
         [ , \bnt{option} [ , ... ] ]
 
     \bnt{option} ::=
-        \{ \kw{ground} , \bnt{<ground_node}
+        \{ \kw{ground} , \bnt{ground_node}
             | \kw{initial value} , \bnt{const_vel} , \bnt{cosine_vel} , \bnt{sine_vel}
             | \kw{max iterations} , \bnt{max_iterations}
             | \kw{tolerance} , \bnt{tolerance}
