--- a/manual/install/install.tex
+++ b/manual/install/install.tex
@@ -41,6 +41,7 @@
 \newcommand{\kw}[1]{\texttt{#1}}
 %\newcommand{\kw}[1]{\fbox{\texttt{#1}}}
 \newcommand{\T}[1]{\boldsymbol{#1}}
+%\newcommand{\T}[1]{\bm{#1}}
 
 \begin{document}
 
