highlight the uniform, not normal, distribution

--- a/manual/input/general.tex
+++ b/manual/input/general.tex
@@ -2874,7 +2874,7 @@ The function
 %\end{verbatim}
 Generates pseudo-random numbers using the \texttt{rand(3)} call
 of the C standard library.
-Numbers are uniformly distributed in the interval
+Numbers are \emph{uniformly distributed} in the interval
 $[\nt{mean\_value} - \nt{amplitude\_value}, \nt{mean\_value} + \nt{amplitude\_value})$.
 
 The first optional entry, \nt{steps\_to\_hold\_value},
