remove outdated warning

--- a/manual/input/elements.tex
+++ b/manual/input/elements.tex
@@ -3733,7 +3733,7 @@ The joint is shown in Figure~\ref{fig:el:joint:CARDANO} where the origins and or
 \begin{figure}
 \centering
 \includegraphics[width=.5\textwidth]{cardano}
-\caption{Cardano hinge \textcolor{red}{[Warning: the reference system 1', 2', 3' on the left is incorrect; the correct axes are labeled according to the reference system on the right]}.}
+\caption{Cardano hinge.}
 \label{fig:el:joint:CARDANO}
 \end{figure}
 Note: this joint does not represent a constant velocity joint,
