--- a/manual/mybib.bib
+++ b/manual/mybib.bib
@@ -3172,3 +3172,18 @@
 	note = {{doi:10.1007/s00466-008-0307-x}}
 }
 
+@article{DEGROOTE-2017-SRS,
+	title = {Contribution of muscle short-range stiffness to initial changes in joint kinetics and kinematics during perturbations to standing balance: {A} simulation study},
+	volume = {55},
+	issn = {00219290},
+	shorttitle = {Contribution of muscle short-range stiffness to initial changes in joint kinetics and kinematics during perturbations to standing balance},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0021929017301045},
+	doi = {10.1016/j.jbiomech.2017.02.008},
+	language = {en},
+	urldate = {2019-12-20},
+	journal = {Journal of Biomechanics},
+	author = {De Groote, Friedl and Allen, Jessica L. and Ting, Lena H.},
+	month = apr,
+	year = {2017},
+	pages = {71--77},
+}
