--- a/manual/input/problems.tex
+++ b/manual/input/problems.tex
@@ -200,7 +200,7 @@ strategy is defined using the \kw{strategy} statement.
 %\begin{verbatim}
 \begin{Verbatim}[commandchars=\\\{\}]
     \bnt{card} ::= \kw{tolerance} : \{ \kw{null} | \bnt{residual_tolerance} \}
-            [ , \kw{test} , \{ \kw{none} | \kw{norm} | \kw{minmax} \} [ , \kw{scale} ] ]
+            [ , \kw{test} , \{ \kw{none} | \kw{norm} | \kw{minmax} | \kw{relnorm} | \kw{sepnorm}\} [ , \kw{scale} ] ]
         [ , \{ \kw{null} | \bnt{solution_tolerance} \} 
             [ , \kw{test} , \{ \kw{none} | \kw{norm} | \kw{minmax} \} ] ] ;
 \end{Verbatim}
@@ -211,11 +211,27 @@ disables the residual testing, disabling the computation
 of the test on the residual.
 The \kw{test} mechanism is used to select what kind of test must
 be performed; currently, only \kw{norm} (the default) 
-and \kw{minmax} are supported.
+and \kw{minmax} are supported for the \bnt{solution\_tolerance}, with
+the additional \kw{relnorm} and \kw{sepnorm} making sense only for the residual.
+
 The special value \kw{none} means that the test is not actually 
 computed; it is the default when the test is disabled by setting
 the tolerance to zero, or by using the keyword \kw{null};
 however, it can be restored to any mechanism for output purposes.
+
+The \kw{relnorm} test can be useful when the magnitude of the
+generalized forces involved in the model is unknown, thus
+one does not know what value of tolerance may make sense for the problem at hand.
+In this case \kw{relnorm} allows to compute a reference scale, so that the
+converge test will be mosty unaffected by the system of units chosen for the simulation.
+This automatic scaling comes with a small run time penalty, because two global vectors
+needs to be assembled insetad of one whnever the model residual is computed.
+The \kw{sepnorm} test is a generalization of \kw{relnorm}: the residual check is performed 
+independently for each set of equations with the same physical dimension, and the correspondig residual norm
+is automatically scaled. The worst residual among all the different sets of equations is returned.
+See the tecman for an exhaustive explanation of both approaches.
+A meamningful tolerance for both \kw{relnorm} and \kw{sepnorm} could be in the range [1.E-6, 1.E-4].
+
 The optional parameter \kw{scale} is used to enable the scaling
 of the residual before performing the test; default scale factors 
 can be set for each type of degree of freedom owner, as seen for the control data item of Section~\ref{sec:CONTROLDATA:DEFAULTSCALE}; some
