rename utils/printenv into print_env; fix issue #98

--- a/manual/install/install.tex
+++ b/manual/install/install.tex
@@ -340,7 +340,7 @@ Specific options (from \kw{configure -{}-help}):
   --with-y12              with Y12 sparse math library (yes)
   --with-umfpack          with Umfpack math library (auto)
   --with-lapack           with LAPACK math library (auto)
-  --with-hsl              with HSL (Harwell) sparse math library - historical (auto)
+  --with-harwell          with HSL (Harwell) sparse math library - historical (auto)
   --with-meschach         with Meschach math library - historical (auto)
   --with-superlu          with SuperLU math library - eXperimental (auto)
 
