--- a/CHANGES
+++ b/CHANGES
@@ -11,6 +11,9 @@ Paolo Mantegazza        <mantegazza@aero.polimi.it>
 
 MBDyn 1.X-Devel
 	Enhancements:
+		- refactor and improve output units (Marco Morandini)
+		- increase Naive solver's default pivot factor from 1E-8 to 1E-5 (Marco Morandini)
+		- remove Meschach (Marco Morandini)
 		- added Watson, Pardiso, QR and SPQR wrappers (Reinard Resch)
 		- add matrix free line search (Reinard Resch)
 		- add automatic differentiation capabilities to many elements,
