another meschach leftover

--- a/manual/input/problems.tex
+++ b/manual/input/problems.tex
@@ -1065,7 +1065,8 @@ the matrix fills up.
 
 \paragraph{Other.}
 Historically, MBDyn supported the \kw{meschach} and \kw{harwell} solvers.
-They are now deprecated and undocumented.
+\kw{Meschach} has been removed, while \kw{harwell}
+is now deprecated and undocumented.
 Other linear solvers may be supported for experimental reasons
 (for example, \kw{taucs}, \kw{watson});
 however, they are not documented as they are not intended for general use.
