inline joint with friction: rel velocity output

--- a/manual/input/elements.tex
+++ b/manual/input/elements.tex
@@ -4653,7 +4653,8 @@ The output occurs in the \texttt{.jnt} file, according to default joint output
 for the first 13 columns; and if friction is present:
 \begin{itemize}
 \item column 14: the friction force along the line of the joint (applied in negative and positive directions for nodes 1 and 2, respectively);
-\item subsequent columns: any friction model specific data (quite possibly the friction coefficient).
+\item column 15: the friction coefficient;
+\item column 16: the relative sliding velocity.
 \end{itemize}
 
 
