--- a/manual/input/elemaero.tex
+++ b/manual/input/elemaero.tex
@@ -145,10 +145,10 @@ This means that the aerodynamic beam offsets refer to the position
 of the beam's nodes, and have nothing to do with offsets related
 to the structural beam element.
 
-The \htybkw{Shape}{1D} entities are used to compute the physical chord,
-aerodynamic center, velocity measurement point (the point where the
-kinematic boundary conditions are evaluated) and twist, in radians, as functions
-of the dimensionless abscissa along the span.
+The \htybkw{Shape}{1D} entities are used to compute the physical chord (\nt{surface\_chord}, dimensional; must be non-negative),
+aerodynamic center (\nt{surface\_aerodynamic\_center}, dimensional, positive when forward of the reference line), velocity measurement point
+(\nt{surface\_b\_c\_point}, the point where the kinematic boundary conditions are evaluated, positive when backwards?)
+and twist (\nt{surface\_twist}, positive when nose up), in radians, as functions of the dimensionless abscissa along the span.
 
 The optional \kw{tip loss} keyword allows the user to define an additional shape,
 \nt{tip\_loss},
