--- a/manual/input/netcdfout.tex
+++ b/manual/input/netcdfout.tex
@@ -226,7 +226,7 @@ The \kw{aerodynamic beam3} outputs at $N = 3 \cdot n$ points.
 
 \item \kw{elem.aerodynamic.}\bnt{label}\kw{.gamma\_}\bnt{i} contains the sideslip angle, in degrees
 
-\item \kw{elem.aerodynamic.}\bnt{label}\kw{.gamma\_}\bnt{i} contains the Mach number
+\item \kw{elem.aerodynamic.}\bnt{label}\kw{.Mach\_}\bnt{i} contains the Mach number
 
 \item \kw{elem.aerodynamic.}\bnt{label}\kw{.cl\_}\bnt{i} contains the lift coefficient
 
