--- a/manual/input/modules.tex
+++ b/manual/input/modules.tex
@@ -802,7 +802,7 @@ The optional keyword \kw{model} activates the selection of the implementation:
       \end{cases}
     \end{equation}
     where $f_1$ is the active force-stretch relationship defined according to the model
-    presented in~\ref{PENNESTRI-2007-JB}, $x = \nt{lref}/\nt{L0}$ and 
+    presented in~\cite{PENNESTRI-2007-JB}, $x = \nt{lref}/\nt{L0}$ and 
     $\Delta x = \frac{\ell}{\nt{L0}} - \frac{\nt{lref}}{\nt{L0}}$;
   \item \kw{exponential} defines the SRS contribution through a smooth model, preserving
     the initial gradient in the reference configuration:
