add support for Euler vector in local reference frame

--- a/manual/input/nodes.tex
+++ b/manual/input/nodes.tex
@@ -446,6 +446,9 @@ The following data are available:
 \item \kw{"omegaP[1]"} angular acceleration in direction 1, in the reference frame of the node
 \item \kw{"omegaP[2]"} angular acceleration in direction 2, in the reference frame of the node
 \item \kw{"omegaP[3]"} angular acceleration in direction 3, in the reference frame of the node
+\item \kw{"phi[1]"} orientation vector in direction 1, in the reference frame of the node
+\item \kw{"phi[2]"} orientation vector in direction 2, in the reference frame of the node
+\item \kw{"phi[3]"} orientation vector in direction 3, in the reference frame of the node
 \end{enumerate}
 
 Note: Euler parameters actually do not take into account 
