document inline relative velocity and displacement output

--- a/manual/input/elements.tex
+++ b/manual/input/elements.tex
@@ -4654,7 +4654,8 @@ for the first 13 columns; and if friction is present:
 \begin{itemize}
 \item column 14: the friction force along the line of the joint (applied in negative and positive directions for nodes 1 and 2, respectively);
 \item column 15: the friction coefficient;
-\item column 16: the relative sliding velocity.
+\item column 16: the relative sliding velocity;
+\item column 17: the relative sliding displacement.
 \end{itemize}
 
 
